# rust-clip

./: .gitignore  Cargo.toml  README.md  build.rs  installer.iss
locales/: en.json  it.json
src/: ble.rs  broadcast.rs  clipboard.rs  crypto.rs  discovery.rs  events.rs  firewall.rs  identity.rs  lib.rs  main.rs
src/core/: clipboard.rs  config.rs  crypto.rs  discovery.rs  firewall.rs  identity.rs  mod.rs  packet.rs
src/transport/: handshake.rs  mod.rs
src/transport/ble/: macos.rs  mod.rs  windows.rs
src/ui/: app.rs  mod.rs  tray.rs
tests/: clipboard_tests.rs  crypto_tests.rs  discovery_tests.rs
wix/: License.rtf  main.wxs
