[package]
name = "rust-clip"
version = "0.1.0"
edition = "2021"

[dependencies]
# System & Async
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
local-ip-address = "0.5"

# Crypto Core
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10" # Per il file su disco
chacha20poly1305 = "0.10" # Per la rete (XChaCha20)
bip39 = "2.0"
hex = "0.4"
machine-uid = "0.5"

# Data & State
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3" # Serializzazione binaria efficiente per la rete
dashmap = "5.5" # Mappa thread-safe per la lista peer

# Clipboard
arboard = "3.3"

# Networking
mdns-sd = "0.10"

image = "0.24"