[package]
name = "rust-clip"
version = "0.1.0"
edition = "2021"
authors = ["Federico Paglioni <paglioni.federico@gmail.com>"]
description = "Universal Clipboard Sync"
license = "MIT"
default-run = "rust-clip"

[[bin]]
name = "rust-clip"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
# --- SYSTEM & ASYNC ---
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
local-ip-address = "0.5"
async-trait = "0.1"
flume = "0.11"
chrono = "0.4"
directories = "5.0"
open = "5.0"

# --- CRYPTO ---
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
bip39 = "2.0"
hex = "0.4"
machine-uid = "0.5"
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
curve25519-dalek = "4.1" # For Diffie-Hellman if needed later

# --- DATA ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "5.5"
rust-i18n = "3.0"

# --- CLIPBOARD & MEDIA ---
arboard = "3.3"
image = "0.24"

# --- NETWORKING ---
mdns-sd = "0.10"

# --- GUI & TRAY ---
eframe = "0.30.0"
tray-icon = "0.19"

# --- UX ---
notify-rust = "4.10"
auto-launch = "0.5"

hostname = "0.3"
raw-window-handle = "0.6"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSArray", "NSDictionary", "NSData", "NSError", "NSDate", "NSRunLoop"] }
objc2-core-bluetooth = { version = "0.3.2", features = [
    "CBPeripheralManager",
    "CBAdvertisementData",
    "CBUUID",
    "CBService",
    "CBCharacteristic",
    "CBATTRequest"
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }

[package.metadata.bundle]
name = "RustClip"
identifier = "com.rustclip.app"
icon = ["assets/icon.png"]
version = "1.0.0"
copyright = "Copyright 2024 RustClip"
category = "Productivity"
short_description = "Universal Clipboard Sync"
long_description = "Share clipboard content between devices via LAN."